# hakyll-snippets

./: README.markdown  hakyll-snippets.cabal
src/Hakyll/: Snippets.hs
src/Hakyll/Snippets/: Haskell.hs
